# lightNVR

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  BEFORE_AFTER_COMPARISON.md  BUILD_PROCESS_IMPROVEMENTS.md  CLA.md  CMakeLists.txt  DELETION_FIXES.md  DOCKER_IMPROVEMENTS.md  DOCKER_MIGRATION_GUIDE.md  DOCKER_QUICK_START.md  DOCKER_TEST_CHECKLIST.md  Dockerfile  Dockerfile.alpine  ENTRYPOINT_FIX.md  FIXES_SUMMARY.md  GITHUB_ACTIONS_FIX.md  GO2RTC_SETTINGS_RELOAD_FIX.md  GO2RTC_WEBRTC_NAT_FIX.md  HLS_BUFFER_APPEND_ERROR_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_66_FIX_SUMMARY.md  LICENSE  MONGOOSE_REMOVAL_QUICK_REF.md  MONGOOSE_REMOVAL_SUMMARY.md  ONVIF_CREDENTIALS_FIX.md  ONVIF_NETWORK_OVERRIDE_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_COMPLETE.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PRD-onivf-motion-detect.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  THUMBNAIL_QUEUE_SOLUTION.md  WEBRTC_TROUBLESHOOTING.md  count.py  deploy_and_sync.sh  (+28 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  cla-signatures.json
config/: lightnvr-test.ini  lightnvr.conf.default  lightnvr.conf.libconfig  lightnvr.ini  web_optimization.json
digitalocean-llm-setup/: DEPLOYMENT-GUIDE.md  H200-CONFIG.md  QUICK-START.md  REQUEST-GPU-ACCESS.md  client-example.py  setup-h200.sh  setup-multi-h100.sh  setup-single-h100.sh
docs/: API.md  ARCHITECTURE.md  AUTH_IMPROVEMENTS.md  BUILD.md  COMMERCIAL.md  CONFIGURATION.md  DOCKER.md  FRONTEND.md  GO2RTC_CAMERA_RECONNECTION_FIX.md  GO2RTC_CONFIG_OVERRIDE.md  GO2RTC_INTEGRATION.md  GO2RTC_PROCESS_MONITORING.md  HLS_REFACTORING.md  INSTALLATION.md  LIBUV_API_HANDLERS_STATUS.md  LIBUV_LLHTTP_MIGRATION.md  MONGOOSE_CLEANUP_CHECKLIST.md  MONGOOSE_REMOVAL_FINAL_REVIEW.md  MONGOOSE_REMOVAL_STATUS.md  MOTION_BUFFER.md  MOTION_DETECTION_OPTIMIZATION.md  MQTT_INTEGRATION.md  ONVIF_DETECTION.md  ONVIF_MOTION_RECORDING.md  PLAN_Recording_Retention_Implementation.md  PRD_Recording_Retention_Policies.md  PRE_DETECTION_BUFFER_IMPLEMENTATION.md  QUICKREF_Retention_API.md  RELEASE_PROCESS.md  REVERSE_PROXY.md  SOD_INTEGRATION.md  SOD_REALNET.md  SOD_UNIFIED_DETECTION.md  STATE_MANAGEMENT.md  SUMMARY_Recording_Retention.md  SYSLOG.md  TROUBLESHOOTING.md  TROUBLESHOOTING_WEB_INTERFACE.md  ZONE_CONFIGURATION.md
docs/prd/: README.md  (+3 more)
examples/: README.md  go2rtc_config_example.yaml  onvif_motion_recording_example.c
include/: ezxml.h
k8s/: coturn.yaml  deploy-turn.sh  deployment.yaml  go2rtc-configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml  setup-turn.sh  tcp-services-configmap.yaml  wireguard-secret.yaml
lightnvr-buildroot/: CHANGELOG.md  README.md  lightnvr.mk
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
playwright-report/: index.html
scripts/: AUTOMATION-QUICKSTART.md  DEMO-CAMERAS.md  README-screenshots.md  README.md  build.sh  build_and_update_web_snowpack.sh  build_and_update_web_vite.sh  build_web_snowpack.sh  build_web_vite.sh  bump-version.sh  capture-demos.js  capture-detection-demos.js  capture-screenshots.js  demo-cameras.json  extract_version.js  extract_version.sh  generate_embedded_migrations.py  install.sh  install_go2rtc.sh  install_web_assets.sh  migrate-remove-web-dist.sh  optimize_web_assets.sh  release.sh  run-integration-tests.sh  run-playwright.sh  setup-demo-streams.js  setup_rtsp_streams.sh  setup_rtsp_streams_hd.sh  start-test-lightnvr.sh  stream_mp4_loop.sh  test-screenshot-capture.sh  test-streams.sh  update-documentation-media.sh  update_html_for_vite.sh
src/sod/: CMakeLists.txt  sod.c
stress_test_results_20260208_100633/: response_83.json  results.csv  summary.txt
tests/: CMakeLists.txt  test_go2rtc_recovery.c  test_motion_detection_optimized.c  test_sod_realnet.c  test_sod_unified.c  test_sod_voc.c  test_stream_detection.c  test_websocket_bridge.c
tests/database/: db_backup_test.c
tests/integration/: global-setup.ts  global-teardown.ts  go2rtc.api.spec.ts  lightnvr.api.spec.ts  lightnvr.ui.spec.ts  recordings-url-utils.ui.spec.ts
tests/integration/fixtures/: test-fixtures.ts
tests/integration/pages/: BasePage.ts  LiveViewPage.ts  LoginPage.ts  RecordingsPage.ts  SettingsPage.ts  StreamsPage.ts  SystemPage.ts  TimelinePage.ts  UsersPage.ts  index.ts
tests/integration/specs/: auth.api.spec.ts  auth.ui.spec.ts  comprehensive.api.spec.ts  liveview.ui.spec.ts  recordings.ui.spec.ts  roles.ui.spec.ts  settings.ui.spec.ts  streams.ui.spec.ts  substream-fullscreen.ui.spec.ts  system.ui.spec.ts  timeline-boundary.ui.spec.ts  timeline.ui.spec.ts  users.ui.spec.ts
tests/load/: config.ts  index.ts  reporter.ts  runner.ts  scenarios.ts
tests/unit/: CMakeLists.txt  test_api_detection.c  test_api_handlers_system.c  test_audio_voice_enhancement.c  test_batch_delete_progress.c  test_config.c  test_cross_stream_motion_trigger.c  test_db_auth.c  test_db_detections.c  test_db_events.c  test_db_maintenance.c  test_db_motion_config.c  test_db_query_builder.c  test_db_recording_tags.c  test_db_recordings_extended.c  test_db_recordings_sync.c  test_db_schema_cache.c  test_db_streams.c  test_db_system_settings.c  test_db_transactions.c  test_db_zones.c  test_detection_config.c  test_detection_model_motion.c  test_detection_result_structures.c  test_detection_system_onvif.c  test_go2rtc_binary_detection.c  test_go2rtc_process_config_generation.c  test_go2rtc_process_detection.c  test_go2rtc_two_config_merge.c  test_httpd_utils.c  test_interruptible_sleep.c  test_logger.c  test_logger_json.c  test_memory.c  test_motion_detection.c  test_mp4_writer_watchdog.c  test_onvif_soap_fault.c  test_packet_buffer.c  test_path_utils.c  test_request_response.c  (+13 more)
web/: VITE.md  debug.html  hls.html  index.html  jest.config.cjs  live.html  login.html  motion.html  package-lock.json  package.json  postcss.config.js  recordings.html  settings.html  snowpack.config.js  streams.html  system.html  tailwind.config.js  timeline.html  users.html  vite-plugin-theme-inject.js  vite.config.js
(+720 files in other folders)
